+ clean of the text transformation for 'shiftable' keys + kbd_caps default flag value + new_lang flag, set when language/layout is switched % HTML entities decoding moved to addLayout method, all layout properties are entities-free - valueOf override % bug with improper layout properties assignment + updateLayoutList method and dropdown box with layouts % language selection moved to setNextLang % improved the check in switchLayout method to allow only valid langs/layouts + check for nulls in 'name' in switchLayout method + setNextLang/setNextLayout methods to switch languages and layouts + check to prevent uppercase transformation, if it's 'shiftable' button + keyboard shortcuts for lang/layout switching + cyrillic transliteration layout
git-svn-id: http://svn.debugger.ru/repos/jslibs/Virtual%20Keyboard/trunk@62 9a90dfcf-8112-0410-8cf2-8049563067c9

--- a/keyboard/keyboard.css
+++ b/keyboard/keyboard.css
@@ -113,6 +113,7 @@
         position: relative;
         left: -4px;
         text-indent: 0;
+        text-transform: none;
 }
 #virtualKeyboard #kbDesk div#kb_benter {
         background-position: -194px 0px;
